test/fail/error_recursive_type_parameter.sest
module ErrorRecursiveTypeParameter = struct

  let f(x) = { x | foo = x }
/*
  let main(args) =
    f({foo = 42, bar = true})
*/
end
